--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-     - "./DocumentRoot:/var/www/html"
+      - "./public:/var/www/html"  # Actualizado aquí
     command: "/bin/sh -c 'docker-php-ext-install mysqli && exec apache2-foreground'"
 
   mariadb:
