--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ APP_DEBUG=true
 # Configuración de la base de datos
 DB_HOST=mariadb
 DB_PORT=3306
-DB_DATABASE=mydatabase
+DB_DATABASE=Screen
 DB_USERNAME=root
 DB_PASSWORD=root
 
